Fix roommates overflow

--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,10 @@ body {
    overflow: auto;
 }
 
+.roommates {
+   overflow: hidden;
+}
+
 .laptop--screen::-webkit-scrollbar {
    display: none;
 }
